fixed some files again

--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -59,11 +59,12 @@
                 <div class="module">
                     <h3>Probabilite & statistiques :</h3>
                     <ul class="docs_list">
-                        <li><b>Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1YDz7KYCbyG2o0_xiXfmPNMb97JottU__/view?usp=share_link">voir</a></i></li>
-                        <li><b>Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1qMY86vnuidQK-u3mraYNikES1jEsOljp/view?usp=share_link">voir</a></i></li>
-                        <li><b>Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/149PMD_yHtnvuYdsj6o99pEvt0lZo1HpL/view?usp=share_link">voir</a></i></li>
-                        <li><b>Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1ldy7TwJ1eJBlZVgG5y39MXaDLOnyVlXG/view?usp=share_link">voir</a></i></li>
-                        <li><b>Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1jFWJ9fAsdhbfSibLGE5hwCP0HGvEjTir/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2022_2023 - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1r-86ju60iwlLwBoZNLZ8TSuc-Iq82aEp/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2021_2022 - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1YDz7KYCbyG2o0_xiXfmPNMb97JottU__/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2021_2022 - Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1qMY86vnuidQK-u3mraYNikES1jEsOljp/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2021_2022 - Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/149PMD_yHtnvuYdsj6o99pEvt0lZo1HpL/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2021_2022 - Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1ldy7TwJ1eJBlZVgG5y39MXaDLOnyVlXG/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2021_2022 - Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1jFWJ9fAsdhbfSibLGE5hwCP0HGvEjTir/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/13FlrssDD05H_i4Kr7F3Nm3_1tVPsyBvs/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1LcEzaRXXuFr4YsrwrKy_uLTmYiIUbF-y/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/1mv5kuMZBIuApUTnZbZTdOsXifsLCxNGS/view?usp=share_link">voir</a></i></li>
