added new files

--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -60,6 +60,7 @@
                     <h3>Probabilite & statistiques :</h3>
                     <ul class="docs_list">
                         <li><b>Cours 2022_2023 - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1r-86ju60iwlLwBoZNLZ8TSuc-Iq82aEp/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2022_2023 - Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1BL0Pw6zdOrYkG3z4xxwEsrbfazLs8IWx/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours 2021_2022 - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1YDz7KYCbyG2o0_xiXfmPNMb97JottU__/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours 2021_2022 - Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1qMY86vnuidQK-u3mraYNikES1jEsOljp/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours 2021_2022 - Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/149PMD_yHtnvuYdsj6o99pEvt0lZo1HpL/view?usp=share_link">voir</a></i></li>
