--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -27,9 +27,9 @@
                 <a class="block_container smi_bg" href="./s1/"><div class="block">S1</div></a>
                 <a class="block_container smi_bg" href="./s2/"><div class="block">S2</div></a>
                 <a class="block_container smi_bg" href="./s3/"><div class="block">S3</div></a>
-                <!--<a class="block_container smi_bg" href="./s4/"><div class="block">S4</div></a>
+                <!--<a class="block_container smi_bg" href="./s4/"><div class="block">S4</div></a>-->
                 <a class="block_container smi_bg" href="./s5/"><div class="block">S5</div></a>
-                <a class="block_container smi_bg" href="./s6/"><div class="block">S6</div></a>-->
+                <!--<a class="block_container smi_bg" href="./s6/"><div class="block">S6</div></a>-->
             </div>
         </main>
         <footer>FPK</footer>
