--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -22,7 +22,7 @@
             </a>
         </header>
         <main>
-            <h2 class="filiere">Filière : Sciences mathématiques et informatique</h2>
+            <h2 class="filiere">Filières > Sciences mathématiques et informatique</h2>
             <div class="blocks semesters">
                 <a class="block_container smi_bg" href="./s1/"><div class="block">S1</div></a>
                 <a class="block_container smi_bg" href="./s2/"><div class="block">S2</div></a>
