--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <div class="page_container">
-                <a href="../"><h2 class="filiere">Filière : Sciences Math et Informatique (S1)</h2></a>
+                <a href="../"><h2 class="filiere">Filières > SMI > S1</h2></a>
                 <div class="module">
                     <h3>Analyse 1 :</h3>
                     <ul class="docs_list">
