--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <div class="page_container">
-                <a href="../"><h2 class="filiere">Filière : Sciences Math et Informatique (S4)</h2></a>
+                <a href="../"><h2 class="filiere">Filières > SMI > S4</h2></a>
                 <div class="module">
                     <h3>Structures des données :</h3>
                     <ul class="docs_list">
