--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -25,7 +25,7 @@
         </header>
         <main>
             <div class="page_container">
-                <a href="../"><h2 class="filiere">Filière : Sciences Math et Informatique (S5)</h2></a>
+                <a href="../"><h2 class="filiere">Filières > SMI > S5</h2></a>
                 <div class="module">
                     <h3>Bases de données :</h3>
                     <ul class="docs_list">
