added new files to S1, S3 and S5

--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -68,8 +68,12 @@
                         <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1v7g4OKNU2JjzwvNv7p0kQkwFI4o0YA8m/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1EsKkDz62jrpztnaMknZShvET754wDCFm/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1kMcb-tSS6GMS0ErMoTgJoQhkOsq_fSzl/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction d'examen 2019_2020 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1kMcb-tSS6GMS0ErMoTgJoQhkOsq_fSzl/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2019_2020 Normale (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1kMcb-tSS6GMS0ErMoTgJoQhkOsq_fSzl/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2019_2020 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1Dlk5CeyqSbKV6ymUKEkG6QgMcfnQOBX9/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2020_2021 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1zeEwJqHINddDtD6_j-uN-zAfLMGvn8J0/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2020_2021 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/12MAhTwt6BW8q_u1WQTJBDemlL4BvS-s6/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/17IU3MS8LFq8pkdGchx64kaJdJnoBOEdy/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1nsqqewF85Uup-RhSUal5S1EO3TiFOhnM/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
