--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -42,6 +42,8 @@
                     <ul class="docs_list">
                         <li><b>Algorithmique & Langage C.pdf</b> | <i><a href="https://drive.google.com/file/d/17B4MIDiRTLmPjlIOdZYK95C6lMWZR7P0/view?usp=share_link">voir</a></i></li>
                         <li><b>Algorithmique 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1bxKBcvKV68anr4rFaT5nWYVjsjFL1P9G/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD .pdf</b> | <i><a href="https://drive.google.com/file/d/1MOF5-hY-us8x9oDkAOUw4YxJF-zdEtLE/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD (Les Fonctions) .pdf</b> | <i><a href="https://drive.google.com/file/d/15lfqJcx-2PYlXjNUGPso24BpNVpgrFdW/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 1.pdf</b> | <i><a href="https://drive.google.com/file/d/14XKa_VgNIs_KqrOGDp3aWwKtaQHLmdSj/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 2.odf</b> | <i><a href="https://drive.google.com/file/d/1xBmYx3vBXpAVad_9ATKG3C4EOCyVWGmf/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1wZOHFUhFlnAFZuRuwcBvnoxs6qYCQ1L7/view?usp=share_link">voir</a></i></li>
@@ -82,6 +84,7 @@
                         <li><b>TD 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1CQAYV1y8hjVBRbofS-d5SedIii2Bp6SP/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 1 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/16981YCUAa2x9TADQauc9Ld4Cl4VNSVr7/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 2 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1c0DhKXGZ-ZCb1iqQuSG7kv0ZoZOfSKx5/view?usp=share_link">voir</a></i></li>
+                        <li><b>Controle 2022-2023 .pdf</b> | <i><a href="https://drive.google.com/file/d/1SBY1WmhhcQ-1PAxV45t8NTBCNMFHr4sx/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction du devoir 2020-2021 .pdf</b> | <i><a href="https://drive.google.com/file/d/1gT5-T49YQixILOduQ0OCHJczTWjxvQ8g/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2017_2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1XhrbXaED0-kv0FOYpIq0hXqTTxD1Lj8y/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2018_2019 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1ZdP9GH97v4elx10zcSY_jupdnVxouGVy/view?usp=share_link">voir</a></i></li>
@@ -119,7 +122,7 @@
                         <li><b>Correction de TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1GkZZaOE6i6x51JHnJT7ay6HGYCFVGmz8/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1Uh8V9OaQPsZakzabU25DxhLClb995B0X/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1R--k-edfQnGTrcRgNbh4cLetxZ60Og8i/view?usp=share_link">voir</a></i></li>
-                        <li><b>TP 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1O-QFRDXWtSy981Vn6rGVWbFg2Le9Tp1G/view?usp=share_link">voir</a></i></li>
+                        <li><b>TP 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1flA0tMv1QE8Dxe9qEstltL_p8XFdiIN0/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1j2_cLHu7nW1F1WP1AtDS_IkJb0yU7m2Q/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1EPtWMLreEaQqf_ECX7r25tKc3CHukK3r/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2018_2019 - Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1A1uZxJ2Cxbjo6tMIsPp5YtODUJxaVtih/view?usp=share_link">voir</a></i></li>
