--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -42,6 +42,7 @@
                     <ul class="docs_list">
                         <li><b>Cours - Partie 1 .pdf</b> | <i><a href="https://drive.google.com/file/d/1bLSYsnPr3jb5ZpBEadcLVbykcDyCJ2SM/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours - Partie 2 .pdf</b> | <i><a href="https://drive.google.com/file/d/1cY4vtEFPQB4ji7x69xfFA6T1jgix4BvG/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Partie 3 .pdf</b> | <i><a href="https://drive.google.com/file/d/1BRiFlnOX8e4YGTOhMHg0VcPl5xXn82By/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
