add new files to SMI S1

--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -73,6 +73,7 @@
                         <li><b>Examen 2020_2021 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1zeEwJqHINddDtD6_j-uN-zAfLMGvn8J0/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2020_2021 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/12MAhTwt6BW8q_u1WQTJBDemlL4BvS-s6/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2021_2022 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/17IU3MS8LFq8pkdGchx64kaJdJnoBOEdy/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Normale (Correction) .pdf</b> | <i><a href="https://drive.google.com/file/d/1yEzhXVHcTI0FWXLWZ8kcfSJOlLdL2PyD/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2021_2022 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1nsqqewF85Uup-RhSUal5S1EO3TiFOhnM/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
@@ -85,6 +86,8 @@
                         <li><b>Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1iFpjMNrRuo3I7DilM_kDJecg7R5WPBgn/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD1.pdf</b> | <i><a href="https://drive.google.com/file/d/1F3Ge5vA05ePfy3vKenoAKPaP5uA2XpHT/view?usp=share_link">voir</a></i></li>
                         <li><b>Correction de TD2.pdf</b> | <i><a href="https://drive.google.com/file/d/1z6W8kY9SrzndALvmk098TgZUlMu-CCUL/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1nifI47Ivt9dDXcD2yaPD8QNQ68l_gHde/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1Jsv8Ps6VAe_BJ6qj0PozNAkfaFYVElCm/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -99,6 +102,10 @@
                         <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1DiamdDAs6-SdeHlE9jqjEnY3wpbN0hP8/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1TrK6UcFdtl9mKU1U9uWDx0kSnOJGdtFi/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1GmRQgcnPsLoTaeGq7dAE0lFWwoTPHN3r/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2018_2019 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/11AK43iHu8EZAlSJ-e6FFlfTUUIKYz1H4/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2019_2020 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1HTwr1zB7DD30MNXgguOQSMhcKGfFUykf/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2020_2021 Ratrappage .pdf</b> | <i><a href="https://drive.google.com/file/d/1gETx0u47ojR2P9qOXrwkNlwj8P8cip4-/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1Zxq3glAXhaGMhdzDwtnxOvuZh7uZt7Wa/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -117,9 +124,11 @@
                         <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/18lhLIKFB6MvbAsgz6jb05unZEe9h3nwj/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2017_2018 Normale.jpg</b> | <i><a href="https://drive.google.com/file/d/1pav54-iFCLp964AiNkz22YbOCazW1YtK/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2019_2020 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1OyzDj_1zOBCvQp1FVjoPpK3OD5zh8Ijy/view?usp=share_link">voir</a></i></li>
-                        <li><b>Examen 2019_2020 Ratrappage.pdf</b> | <i><a href="https://drive.google.com/file/d/1Sna2iNdOlbbx8ggPIE_vaMLtC4Fm823j/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2019_2020 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1Sna2iNdOlbbx8ggPIE_vaMLtC4Fm823j/view?usp=share_link">voir</a></i></li>
                         <li><b>Examen 2020_2021 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1vgLvPgQCzuQnfYfyw_KnlzZkKaj_qZjL/view?usp=share_link">voir</a></i></li>
-                        <li><b>Examen 2021_2022 Ratrappage.pdf</b> | <i><a href="https://drive.google.com/file/d/1TAWCOrzQrOFN5eI2j4v0uBEaGTmuHZmk/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1TAWCOrzQrOFN5eI2j4v0uBEaGTmuHZmk/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2020_2021 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1Tw-4000M2muLsgRBW3IGyMEu_kjEt_Ts/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1ty9frj8ez5H--2DJE7YBwcogtiYiu8vu/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
