--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -35,6 +35,7 @@
                         <li><b>Cours (2022_2023) - Partie 4 .pdf</b> | <i><a href="https://drive.google.com/file/d/1ImdT9Qwhh2WuP3SzqxOaqhqoTHqccbiS/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours (2021_2022) .pdf</b> | <i><a href="https://drive.google.com/file/d/1FGEu247wN7qBPH1ky9-hcoN1G8M0PhkJ/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1 (2022_2023) .pdf</b> | <i><a href="https://drive.google.com/file/d/1lNsyRPIUuRipG2mfm9cnQwd3YCU6Ut3J/view?usp=share_link">voir</a></i></li>
+                        <li><b>TP (2022_2023) .pdf</b> | <i><a href="https://drive.google.com/file/d/1V16opFjkJKsj3wew9gNz3xFucKo5Vr4y/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
