--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -68,15 +68,19 @@
                         <li><b>Cours 2021_2022 - Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/149PMD_yHtnvuYdsj6o99pEvt0lZo1HpL/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours 2021_2022 - Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1ldy7TwJ1eJBlZVgG5y39MXaDLOnyVlXG/view?usp=share_link">voir</a></i></li>
                         <li><b>Cours 2021_2022 - Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1jFWJ9fAsdhbfSibLGE5hwCP0HGvEjTir/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 1 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/1mv5kuMZBIuApUTnZbZTdOsXifsLCxNGS/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 1 - 2022_2023 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1yt-NqQu-EJYnFkx0AUDyenRpoqpqX25p/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1mv5kuMZBIuApUTnZbZTdOsXifsLCxNGS/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1yt-NqQu-EJYnFkx0AUDyenRpoqpqX25p/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 2.pdf</b> | <i><a href="https://drive.google.com/file/d/11TL0oTN0eTWT4fln17fTDJk9M_LQzcAL/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 2 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1C_1SqfXGJdqtb9BOOSbBVXoKkkT_ngRs/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1SjtQ6sXVAoJo7C11bO5L5z4thoSd6aCZ/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 3 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1HbU7cX6bbltDI0dXNRuUPkJN-QC1ieod/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1hGxBwzRj5rPng8r1IkpBAwXfg_YrafZe/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 4 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/140hwaOqVA3VTdxRwGmdEkTGxHExdH59n/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2022_2023 - 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1UGaxvtsNZWIRKvQlp_leiGXvJRsXBWGk/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/13FlrssDD05H_i4Kr7F3Nm3_1tVPsyBvs/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1LcEzaRXXuFr4YsrwrKy_uLTmYiIUbF-y/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 2 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/11TL0oTN0eTWT4fln17fTDJk9M_LQzcAL/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 2 - 2022_2023 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1C_1SqfXGJdqtb9BOOSbBVXoKkkT_ngRs/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1AoFCPAK5cZ_4BMOdFVzky1aM4_sWYoAR/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 2 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/17KaYGgV6-M-lcXZvnVkK7IDfS4eKFzUh/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 3 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/1SjtQ6sXVAoJo7C11bO5L5z4thoSd6aCZ/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/15InlVdZKTx_etEp94VtsOO5snydQhYgN/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 3 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1jIBXWh7ytXxx-aooWtulXT_hJVeWF2mU/view?usp=share_link">voir</a></i></li>
                         <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1GCQ7uhq-iMV9KpGMVDbI0Hdcs2fSEJsa/view?usp=share_link">voir</a></i></li>
@@ -85,7 +89,7 @@
                         <li><b>Controle 1 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/16981YCUAa2x9TADQauc9Ld4Cl4VNSVr7/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 2 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1c0DhKXGZ-ZCb1iqQuSG7kv0ZoZOfSKx5/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 2022-2023 .pdf</b> | <i><a href="https://drive.google.com/file/d/1SBY1WmhhcQ-1PAxV45t8NTBCNMFHr4sx/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction du devoir 2020-2021 .pdf</b> | <i><a href="https://drive.google.com/file/d/1gT5-T49YQixILOduQ0OCHJczTWjxvQ8g/view?usp=share_link">voir</a></i></li>
+                        <li><b>Devoir 2020-2021 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1gT5-T49YQixILOduQ0OCHJczTWjxvQ8g/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2017_2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1XhrbXaED0-kv0FOYpIq0hXqTTxD1Lj8y/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2018_2019 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1ZdP9GH97v4elx10zcSY_jupdnVxouGVy/view?usp=share_link">voir</a></i></li>
                         <li><b>Exam 2018_2019 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1fezIEaOxLE-64FU9TYiiGfYuZKkoIImD/view?usp=share_link">voir</a></i></li>
