Added extra <meta> tags

--- a/filieres/smi/s2/index.html
+++ b/filieres/smi/s2/index.html
@@ -12,7 +12,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FPK Biblio</title>
+    <meta name='theme-color' content='#292929'>
+    <meta property='og:site_name' content='FPK Bibliothèque'>
+    <meta property='og:type' content='website'>
+    <meta property="og:image"  content="../../../static/img/meta_img.png">
+    <meta name="twitter:image" content="../../../static/img/meta_img.png">
+    <link rel='icon' href='../../../static/img/fpk_logo.svg'>
+    <title>FPK Biblio - SMI S2</title>
     <link rel="stylesheet" href="../../../static/css/main.css"/>
 </head>
 <body class=" bg-slate-200">
