--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -16,7 +16,11 @@
     <meta property='og:site_name' content='FPK Bibliothèque'>
     <meta property='og:type' content='website'>
     <meta property="og:image"  content="../../../static/img/meta_img.png">
+    <meta property="og:title" content="FPK Bibliothèque">
+    <meta property="og:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <meta name="twitter:image" content="../../../static/img/meta_img.png">
+    <meta name="twitter:title" content="FPK Bibliothèque">
+    <meta name="twitter:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <link rel='icon' href='../../../static/img/fpk_logo.svg'>
     <title>FPK Biblio - SMI S3</title>
     <link rel="stylesheet" href="../../../static/css/main.css"/>
