Edited the <meta> tags

--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -15,14 +15,14 @@
     <meta name='theme-color' content='#292929'>
     <meta property='og:site_name' content='FPK Bibliothèque'>
     <meta property='og:type' content='website'>
-    <meta property="og:image"  content="../../static/img/meta_img.png">
-    <meta property="og:title" content="FPK Bibliothèque">
+    <meta property="og:image"  content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
+    <meta property="og:title" content="FPK Bibliothèque | SMI">
     <meta property="og:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
-    <meta name="twitter:image" content="../../static/img/meta_img.png">
-    <meta name="twitter:title" content="FPK Bibliothèque">
+    <meta name="twitter:image" content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
+    <meta name="twitter:title" content="FPK Bibliothèque | SMI">
     <meta name="twitter:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <link rel='icon' href='../../static/img/fpk_logo.svg'>
-    <title>FPK Biblio - SMI</title>
+    <title>FPK Biblio | SMI</title>
     <link rel="stylesheet" href="../../static/css/main.css"/>
 </head>
 <body class=" bg-slate-200">
