--- a/filieres/smi/s5/index.html
+++ b/filieres/smi/s5/index.html
@@ -74,11 +74,11 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">Cours</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>Cours (21_22).pdf<a download="Bases de données - Cours - Cours (21_22).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (21_22).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Cours (22_23) - Partie 1.pdf<a download="Bases de données - Cours - Cours (22_23) - Partie 1.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Cours (22_23) - Partie 2.pdf<a download="Bases de données - Cours - Cours (22_23) - Partie 2.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Cours (22_23) - Partie 3.pdf<a download="Bases de données - Cours - Cours (22_23) - Partie 3.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Cours (22_23) - Partie 4.pdf<a download="Bases de données - Cours - Cours (22_23) - Partie 4.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 4.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours (21_22).pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (21_22).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - Cours - Cours (21_22).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (21_22).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours (22_23) - Partie 1.pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - Cours - Cours (22_23) - Partie 1.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours (22_23) - Partie 2.pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - Cours - Cours (22_23) - Partie 2.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours (22_23) - Partie 3.pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - Cours - Cours (22_23) - Partie 3.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours (22_23) - Partie 4.pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 4.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - Cours - Cours (22_23) - Partie 4.pdf" href="../../../media/smi/s5/Bases de données/Bases de données - Cours - Cours (22_23) - Partie 4.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-200 last:border-b-0">
@@ -86,7 +86,7 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">TDs</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>TD 1 (22_23).pdf<a download="Bases de données - TDs - TD 1 (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TDs - TD 1 (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>TD 1 (22_23).pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - TDs - TD 1 (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - TDs - TD 1 (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TDs - TD 1 (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-200 last:border-b-0">
@@ -94,7 +94,7 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">TPs</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>TP (22_23).pdf<a download="Bases de données - TPs - TP (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>TP (22_23).pdf<a href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Bases de données - TPs - TP (22_23).pdf" href="../../../media/smi/s5/Bases de données/Bases de données - TPs - TP (22_23).pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                 </tbody>
@@ -112,9 +112,9 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">Cours</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>Partie 1.pdf<a download="Réseau - Cours - Partie 1.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Partie 2.pdf<a download="Réseau - Cours - Partie 2.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>Partie 3.pdf<a download="Réseau - Cours - Partie 3.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Partie 1.pdf<a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Réseau - Cours - Partie 1.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Partie 2.pdf<a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Réseau - Cours - Partie 2.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Partie 3.pdf<a href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="Réseau - Cours - Partie 3.pdf" href="../../../media/smi/s5/Réseau/Réseau - Cours - Partie 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                 </tbody>
@@ -132,7 +132,7 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">Cours</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>Cours .pdf<a download="UML - Cours - Cours .pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>Cours .pdf<a href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="UML - Cours - Cours .pdf" href="../../../media/smi/s5/Conception Orientée Objet (UML)/UML - Cours - Cours .pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                 </tbody>
@@ -150,9 +150,9 @@
                         <td class="px-1 whitespace-nowrap text-center  font-normal">TDs</th>
                         <!-- Corresponding Documents -->
                         <td class="px-3 py-2 w-full font-normal text-left"><ul class="space-y-2">
-                            <li>TD (20_21) - 1.pdf<a download="POO - TDs - TD (20_21) - 1.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>TD (20_21) - 2.pdf<a download="POO - TDs - TD (20_21) - 2.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
-                            <li>TD (20_21) - 3.pdf<a download="POO - TDs - TD (20_21) - 3.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>TD (20_21) - 1.pdf<a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="POO - TDs - TD (20_21) - 1.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 1.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>TD (20_21) - 2.pdf<a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="POO - TDs - TD (20_21) - 2.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 2.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
+                            <li>TD (20_21) - 3.pdf<a href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Voir</a><a download="POO - TDs - TD (20_21) - 3.pdf" href="../../../media/smi/s5/Programmation Orientée Objet (POO)/POO - TDs - TD (20_21) - 3.pdf" class="ml-2 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700">Telecharger</a></li>
                         </ul></th>
                     </tr>
                 </tbody>
