--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -13,14 +13,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='theme-color' content='#292929'>
-    <meta property='og:site_name' content='FPK Bibliothèque'>
+    <meta name="description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
     <meta property='og:type' content='website'>
-    <meta property="og:image"  content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
+    <meta property='og:site_name' content='fpk-biblio.netlify.app'>
+    <meta property="og:url" content="https://fpk-biblio.netlify.app/">
     <meta property="og:title" content="FPK Bibliothèque | SMI S1">
     <meta property="og:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
-    <meta name="twitter:image" content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
+    <meta property="og:image"  content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
+    <meta property="twitter:domain" content="fpk-biblio.netlify.app">
+    <meta name="twitter:url" content="https://fpk-biblio.netlify.app/">
     <meta name="twitter:title" content="FPK Bibliothèque | SMI S1">
     <meta name="twitter:description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://fpk-biblio.netlify.app/static/img/meta_img.png">
     <link rel='icon' href='../../../static/img/fpk_logo.svg'>
     <title>FPK Biblio | SMI S1</title>
     <link rel="stylesheet" href="../../../static/css/main.css"/>
