Added New files

--- a/filieres/smi/s2/index.html
+++ b/filieres/smi/s2/index.html
@@ -105,6 +105,15 @@
                             <li class="py-1 border-b border-gray-200 last:border-b-0">Devoir (21_22) (Exercice 1) [Correction].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s2/Analyse 2/Analyse 2 - Devoirs - Devoir (21_22) (Exercice 1) [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 2 - Devoirs - Devoir (21_22) (Exercice 1) [Correction].pdf" href="../../../media/smi/s2/Analyse 2/Analyse 2 - Devoirs - Devoir (21_22) (Exercice 1) [Correction].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></th>
                     </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</th>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Normale].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s2/Analyse 2/Analyse 2 - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 2 - Exams - Exam (21_22) [Normale].pdf" href="../../../media/smi/s2/Analyse 2/Analyse 2 - Exams - Exam (21_22) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (21_22) [Rattrapage].pdf <span class="whitespace-nowrap"><a href="../../../media/smi/s2/Analyse 2/Analyse 2 - Exams - Exam (21_22) [Rattrapage].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-magnifying-glass-plus"></i></a><a download="Analyse 2 - Exams - Exam (21_22) [Rattrapage].pdf" href="../../../media/smi/s2/Analyse 2/Analyse 2 - Exams - Exam (21_22) [Rattrapage].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></th>
+                    </tr>
                 </tbody>
             </table>
         </div>
